tests/ui/fn/fn-trait-use-named-params-issue-140169.stderr
error: `Trait(...)` syntax does not support named parameters
  --> $DIR/fn-trait-use-named-params-issue-140169.rs:2:22
   |
LL | fn f2(_: impl Fn(u8, vvvv: u8)) {}
   |                      ^^^^ help: remove the parameter name

error: `Trait(...)` syntax does not support named parameters
  --> $DIR/fn-trait-use-named-params-issue-140169.rs:3:18
   |
LL | fn f3(_: impl Fn(aaaa: u8, u8)) {}
   |                  ^^^^ help: remove the parameter name

error: `Trait(...)` syntax does not support named parameters
  --> $DIR/fn-trait-use-named-params-issue-140169.rs:4:18
   |
LL | fn f4(_: impl Fn(aaaa: u8, vvvv: u8)) {}
   |                  ^^^^ help: remove the parameter name

error: `Trait(...)` syntax does not support named parameters
  --> $DIR/fn-trait-use-named-params-issue-140169.rs:4:28
   |
LL | fn f4(_: impl Fn(aaaa: u8, vvvv: u8)) {}
   |                            ^^^^ help: remove the parameter name

error: `Trait(...)` syntax does not support c_variadic parameters
  --> $DIR/fn-trait-use-named-params-issue-140169.rs:7:22
   |
LL | fn f5(_: impl Fn(u8, ...)) {}
   |                      ^^^ help: remove the `...`

error: `Trait(...)` syntax does not support attributes in parameters
  --> $DIR/fn-trait-use-named-params-issue-140169.rs:9:22
   |
LL | fn f6(_: impl Fn(u8, #[allow(unused_attributes)] u8)) {}
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove the attributes

error: aborting due to 6 previous errors

